--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
   font-size: 2em;
   font-weight: 700;
   position: absolute;
-  top: 30px;
+  top: 15px;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -35,7 +35,7 @@ h1 {
   max-width: 70vw;
   width: 90vw;
   min-height: 100vh;
-  border: 5px solid #c0c0c0;
+  border: 10px solid #c0c0c0;
 }
 
 .board {
@@ -57,6 +57,13 @@ h1 {
   font-size: 4vw;
   cursor: pointer;
   border: 1px solid #ccc;
+}
+
+.xfont {
+  color: #f21717;
+}
+.ofont {
+  color: #2e7eff;
 }
 
 .cell:hover {
