--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,17 @@ h1 {
   color: #f21717;
 }
 .ofont {
-  color: #2e7eff;
+  color: blue;
+}
+.X {
+  font-weight: bold;
+  color: red;
+  /* background-color: red; */
+}
+.O {
+  font-weight: bold;
+  color: blue;
+  /* background-color: blue; */
 }
 
 .cell:hover {
@@ -107,6 +117,11 @@ button:active {
   .super-board {
     max-width: 90%;
     width: 90%;
+    min-height: 70vh;
+    border: 5px solid #c0c0c0;
+  }
+  .board {
+    border: 2.5px solid #333;
   }
 
   .cell {
