--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,9 @@ h1 {
 .cell.winner {
   background-color: #f21717;
 }
+.white {
+  color: white;
+}
 
 button {
   font-size: 1em;
@@ -114,6 +117,9 @@ button:active {
 }
 
 @media screen and (max-width: 600px) {
+  #message {
+    top: 70px;
+  }
   .super-board {
     max-width: 90%;
     width: 90%;
